workspace_1.13.0/.metadata/.plugins/org.eclipse.cdt.ui/stm32_uart.build.log
18:35:22 **** Incremental Build of configuration Debug for project stm32_uart ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L476xx -c -I../Core/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc "../Core/Src/stm32l4xx_it.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L476xx -c -I../Core/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/stm32l4xx_it.d" -MT"Core/Src/stm32l4xx_it.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/stm32l4xx_it.o"
arm-none-eabi-gcc "../Core/Src/syscalls.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L476xx -c -I../Core/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/syscalls.d" -MT"Core/Src/syscalls.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/syscalls.o"
arm-none-eabi-gcc "../Core/Src/sysmem.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L476xx -c -I../Core/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/sysmem.d" -MT"Core/Src/sysmem.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/sysmem.o"
arm-none-eabi-gcc "../Core/Src/system_stm32l4xx.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L476xx -c -I../Core/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/system_stm32l4xx.d" -MT"Core/Src/system_stm32l4xx.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/system_stm32l4xx.o"
../Core/Src/main.c: In function 'SystemClock_Config':
../Core/Src/main.c:32:3: warning: implicit declaration of function 'HAL_PWREx_ConfigSupply'; did you mean 'HAL_PWREx_ConfigPVM'? [-Wimplicit-function-declaration]
   32 |   HAL_PWREx_ConfigSupply(PWR_LDO_SUPPLY);
      |   ^~~~~~~~~~~~~~~~~~~~~~
      |   HAL_PWREx_ConfigPVM
../Core/Src/main.c:32:26: error: 'PWR_LDO_SUPPLY' undeclared (first use in this function)
   32 |   HAL_PWREx_ConfigSupply(PWR_LDO_SUPPLY);
      |                          ^~~~~~~~~~~~~~
../Core/Src/main.c:32:26: note: each undeclared identifier is reported only once for each function it appears in
In file included from ../Core/Inc/stm32l4xx_hal_conf.h:398,
                 from ../Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal.h:29,
                 from ../Core/Src/main.c:1:
../Core/Src/main.c:36:30: error: 'PWR_FLAG_VOSRDY' undeclared (first use in this function); did you mean 'PWR_FLAG_VOSF'?
   36 |   while (!__HAL_PWR_GET_FLAG(PWR_FLAG_VOSRDY)) {}
      |                              ^~~~~~~~~~~~~~~
../Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_pwr.h:194:54: note: in definition of macro '__HAL_PWR_GET_FLAG'
  194 | #define __HAL_PWR_GET_FLAG(__FLAG__)  ( ((((uint8_t)(__FLAG__)) >> 5U) == 1)  ?\
      |                                                      ^~~~~~~~
../Core/Src/main.c:40:63: error: 'RCC_OSCILLATORTYPE_LSI1' undeclared (first use in this function); did you mean 'RCC_OSCILLATORTYPE_LSI'?
   40 |   RCC_OscInitStruct.OscillatorType = RCC_OSCILLATORTYPE_HSI | RCC_OSCILLATORTYPE_LSI1;
      |                                                               ^~~~~~~~~~~~~~~~~~~~~~~
      |                                                               RCC_OSCILLATORTYPE_LSI
../Core/Src/main.c:41:21: error: 'RCC_OscInitTypeDef' has no member named 'LSI1State'; did you mean 'LSIState'?
   41 |   RCC_OscInitStruct.LSI1State = RCC_LSI1_ON;
      |                     ^~~~~~~~~
      |                     LSIState
../Core/Src/main.c:41:33: error: 'RCC_LSI1_ON' undeclared (first use in this function); did you mean 'RCC_LSI_ON'?
   41 |   RCC_OscInitStruct.LSI1State = RCC_LSI1_ON;
      |                                 ^~~~~~~~~~~
      |                                 RCC_LSI_ON
../Core/Src/main.c:51:25: error: 'RCC_PLLInitTypeDef' has no member named 'PLLRGE'; did you mean 'PLLR'?
   51 |   RCC_OscInitStruct.PLL.PLLRGE = RCC_PLL1VCIRANGE_1;
      |                         ^~~~~~
      |                         PLLR
../Core/Src/main.c:51:34: error: 'RCC_PLL1VCIRANGE_1' undeclared (first use in this function); did you mean 'RCC_CR_MSIRANGE_1'?
   51 |   RCC_OscInitStruct.PLL.PLLRGE = RCC_PLL1VCIRANGE_1;
      |                                  ^~~~~~~~~~~~~~~~~~
      |                                  RCC_CR_MSIRANGE_1
../Core/Src/main.c:52:24: error: 'RCC_PLLInitTypeDef' has no member named 'PLLVCOSEL'
   52 |   RCC_OscInitStruct.PLL.PLLVCOSEL = RCC_PLL1VCOWIDE;
      |                        ^
../Core/Src/main.c:52:37: error: 'RCC_PLL1VCOWIDE' undeclared (first use in this function)
   52 |   RCC_OscInitStruct.PLL.PLLVCOSEL = RCC_PLL1VCOWIDE;
      |                                     ^~~~~~~~~~~~~~~
../Core/Src/main.c:53:24: error: 'RCC_PLLInitTypeDef' has no member named 'PLLFRACN'
   53 |   RCC_OscInitStruct.PLL.PLLFRACN = 0;
      |                        ^
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j4 all" terminated with exit code 2. Build might be incomplete.

18:35:24 Build Failed. 12 errors, 1 warnings. (took 2s.114ms)

